--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ anyio==4.8.0 ; python_version >= "3.12" and python_version < "4.0"
 certifi==2024.12.14 ; python_version >= "3.12" and python_version < "4.0"
 click==8.1.8 ; python_version >= "3.12" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.12" and python_version < "4.0" and (sys_platform == "win32" or platform_system == "Windows")
+colorlog==6.9.0 ; python_version >= "3.12" and python_version < "4.0"
 dnspython==2.7.0 ; python_version >= "3.12" and python_version < "4.0"
 email-validator==2.2.0 ; python_version >= "3.12" and python_version < "4.0"
 exceptiongroup==1.2.2 ; python_version >= "3.12" and python_version < "4.0"
