--- a/requirements.txt
+++ b/requirements.txt
@@ -33,11 +33,13 @@ python-multipart==0.0.20 ; python_version >= "3.12" and python_version < "4.0"
 pyyaml==6.0.2 ; python_version >= "3.12" and python_version < "4.0"
 rich-toolkit==0.13.2 ; python_version >= "3.12" and python_version < "4.0"
 rich==13.9.4 ; python_version >= "3.12" and python_version < "4.0"
+sentry-sdk==2.20.0 ; python_version >= "3.12" and python_version < "4.0"
 shellingham==1.5.4 ; python_version >= "3.12" and python_version < "4.0"
 sniffio==1.3.1 ; python_version >= "3.12" and python_version < "4.0"
 starlette==0.41.3 ; python_version >= "3.12" and python_version < "4.0"
 typer==0.15.1 ; python_version >= "3.12" and python_version < "4.0"
 typing-extensions==4.12.2 ; python_version >= "3.12" and python_version < "4.0"
+urllib3==2.3.0 ; python_version >= "3.12" and python_version < "4.0"
 uvicorn[standard]==0.34.0 ; python_version >= "3.12" and python_version < "4.0"
 uvloop==0.21.0 ; (sys_platform != "win32" and sys_platform != "cygwin") and platform_python_implementation != "PyPy" and python_version >= "3.12" and python_version < "4.0"
 watchfiles==1.0.4 ; python_version >= "3.12" and python_version < "4.0"
