--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ dnspython==2.7.0 ; python_version >= "3.12" and python_version < "4.0"
 email-validator==2.2.0 ; python_version >= "3.12" and python_version < "4.0"
 exceptiongroup==1.2.2 ; python_version >= "3.12" and python_version < "4.0"
 fastapi-cli[standard]==0.0.7 ; python_version >= "3.12" and python_version < "4.0"
+fastapi==0.115.6 ; python_version >= "3.12" and python_version < "4.0"
 fastapi[standard]==0.115.6 ; python_version >= "3.12" and python_version < "4.0"
 h11==0.14.0 ; python_version >= "3.12" and python_version < "4.0"
 httpcore==1.0.7 ; python_version >= "3.12" and python_version < "4.0"
@@ -33,7 +34,7 @@ python-multipart==0.0.20 ; python_version >= "3.12" and python_version < "4.0"
 pyyaml==6.0.2 ; python_version >= "3.12" and python_version < "4.0"
 rich-toolkit==0.13.2 ; python_version >= "3.12" and python_version < "4.0"
 rich==13.9.4 ; python_version >= "3.12" and python_version < "4.0"
-sentry-sdk==2.20.0 ; python_version >= "3.12" and python_version < "4.0"
+sentry-sdk[fastapi]==2.20.0 ; python_version >= "3.12" and python_version < "4.0"
 shellingham==1.5.4 ; python_version >= "3.12" and python_version < "4.0"
 sniffio==1.3.1 ; python_version >= "3.12" and python_version < "4.0"
 starlette==0.41.3 ; python_version >= "3.12" and python_version < "4.0"
