--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,9 @@
 DEBUG=False
 SENTRY_DSN=''
 
+# Application
+DISCORD_AUTHENTICATION_TOKEN = ''
+
 # Database
 MONGO_HOST=localhost
 MONGO_PORT=27017
