--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ DEBUG=False
 SENTRY_DSN=''
 
 # Application
-DISCORD_AUTHENTICATION_TOKEN = ''
+DISCORD_AUTHENTICATION_TOKEN
 
 # Database
 MONGO_HOST=localhost
