add sending tickets history

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,8 @@ MONGO_DB=activity
 
 # MQ
 RABBIT_MQ_URI=amqp://guest:guest@127.0.0.1/
+
+# Integration
+## MagicRust
+MAGIC_RUST_STATS_URL=
+MAGIC_RUST_STATS_TOKEN=
