add voice recording transcript

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,8 @@ MONGO_USERNAME=mongo
 MONGO_PASSWORD=mongo
 MONGO_DB=activity
 
+REDIS_URL='redis://redis:6379'
+
 # MQ
 RABBIT_MQ_URI=amqp://guest:guest@127.0.0.1/
 
@@ -19,3 +21,6 @@ RABBIT_MQ_URI=amqp://guest:guest@127.0.0.1/
 ## MagicRust
 MAGIC_RUST_STATS_URL=
 MAGIC_RUST_STATS_TOKEN=
+
+## ASSEMBLYAI AAI
+ASSEMBLYAI_TOKEN=''
