--- a/requirements.txt
+++ b/requirements.txt
@@ -1,48 +1,62 @@
-aio-pika==9.5.4 ; python_version >= "3.12" and python_version < "4.0"
+aio-pika==9.5.5 ; python_version >= "3.12" and python_version < "4.0"
 aiormq==6.8.1 ; python_version >= "3.12" and python_version < "4.0"
 annotated-types==0.7.0 ; python_version >= "3.12" and python_version < "4.0"
-anyio==4.8.0 ; python_version >= "3.12" and python_version < "4.0"
-certifi==2024.12.14 ; python_version >= "3.12" and python_version < "4.0"
+anyio==4.9.0 ; python_version >= "3.12" and python_version < "4.0"
+assemblyai==0.38.0 ; python_version >= "3.12" and python_version < "4.0"
+certifi==2025.1.31 ; python_version >= "3.12" and python_version < "4.0"
+cffi==1.17.1 ; platform_python_implementation == "CPython" and sys_platform == "win32" and python_version >= "3.12" and python_version < "4.0"
 click==8.1.8 ; python_version >= "3.12" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.12" and python_version < "4.0" and (sys_platform == "win32" or platform_system == "Windows")
 colorlog==6.9.0 ; python_version >= "3.12" and python_version < "4.0"
 dnspython==2.7.0 ; python_version >= "3.12" and python_version < "4.0"
+dramatiq[redis,watch]==1.17.1 ; python_version >= "3.12" and python_version < "4.0"
 email-validator==2.2.0 ; python_version >= "3.12" and python_version < "4.0"
 exceptiongroup==1.2.2 ; python_version >= "3.12" and python_version < "4.0"
 fastapi-cli[standard]==0.0.7 ; python_version >= "3.12" and python_version < "4.0"
-fastapi==0.115.6 ; python_version >= "3.12" and python_version < "4.0"
-fastapi[standard]==0.115.6 ; python_version >= "3.12" and python_version < "4.0"
+fastapi==0.115.12 ; python_version >= "3.12" and python_version < "4.0"
+fastapi[standard]==0.115.12 ; python_version >= "3.12" and python_version < "4.0"
+gevent==24.11.1 ; python_version >= "3.12" and python_version < "4.0"
+greenlet==3.1.1 ; python_version >= "3.12" and python_version < "4.0" and platform_python_implementation == "CPython"
 h11==0.14.0 ; python_version >= "3.12" and python_version < "4.0"
-httpcore==1.0.7 ; python_version >= "3.12" and python_version < "4.0"
+httpcore==1.0.8 ; python_version >= "3.12" and python_version < "4.0"
 httptools==0.6.4 ; python_version >= "3.12" and python_version < "4.0"
 httpx==0.28.1 ; python_version >= "3.12" and python_version < "4.0"
 idna==3.10 ; python_version >= "3.12" and python_version < "4.0"
-jinja2==3.1.5 ; python_version >= "3.12" and python_version < "4.0"
+jinja2==3.1.6 ; python_version >= "3.12" and python_version < "4.0"
 markdown-it-py==3.0.0 ; python_version >= "3.12" and python_version < "4.0"
 markupsafe==3.0.2 ; python_version >= "3.12" and python_version < "4.0"
 mdurl==0.1.2 ; python_version >= "3.12" and python_version < "4.0"
-multidict==6.1.0 ; python_version >= "3.12" and python_version < "4.0"
+multidict==6.4.3 ; python_version >= "3.12" and python_version < "4.0"
 pamqp==3.3.0 ; python_version >= "3.12" and python_version < "4.0"
-propcache==0.2.1 ; python_version >= "3.12" and python_version < "4.0"
-pydantic-core==2.27.2 ; python_version >= "3.12" and python_version < "4.0"
-pydantic-settings==2.7.1 ; python_version >= "3.12" and python_version < "4.0"
-pydantic==2.10.5 ; python_version >= "3.12" and python_version < "4.0"
+prometheus-client==0.21.1 ; python_version >= "3.12" and python_version < "4.0"
+propcache==0.3.1 ; python_version >= "3.12" and python_version < "4.0"
+pycparser==2.22 ; platform_python_implementation == "CPython" and sys_platform == "win32" and python_version >= "3.12" and python_version < "4.0"
+pydantic-core==2.33.1 ; python_version >= "3.12" and python_version < "4.0"
+pydantic-settings==2.8.1 ; python_version >= "3.12" and python_version < "4.0"
+pydantic==2.11.3 ; python_version >= "3.12" and python_version < "4.0"
 pygments==2.19.1 ; python_version >= "3.12" and python_version < "4.0"
-pymongo==4.10.1 ; python_version >= "3.12" and python_version < "4.0"
-python-dotenv==1.0.1 ; python_version >= "3.12" and python_version < "4.0"
+pymongo==4.12.0 ; python_version >= "3.12" and python_version < "4.0"
+python-dotenv==1.1.0 ; python_version >= "3.12" and python_version < "4.0"
 python-multipart==0.0.20 ; python_version >= "3.12" and python_version < "4.0"
 pyyaml==6.0.2 ; python_version >= "3.12" and python_version < "4.0"
-rich-toolkit==0.13.2 ; python_version >= "3.12" and python_version < "4.0"
-rich==13.9.4 ; python_version >= "3.12" and python_version < "4.0"
-sentry-sdk[fastapi]==2.20.0 ; python_version >= "3.12" and python_version < "4.0"
+redis==5.2.1 ; python_version >= "3.12" and python_version < "4.0"
+rich-toolkit==0.14.1 ; python_version >= "3.12" and python_version < "4.0"
+rich==14.0.0 ; python_version >= "3.12" and python_version < "4.0"
+sentry-sdk[fastapi]==2.25.1 ; python_version >= "3.12" and python_version < "4.0"
+setuptools==78.1.0 ; python_version >= "3.12" and python_version < "4.0"
 shellingham==1.5.4 ; python_version >= "3.12" and python_version < "4.0"
 sniffio==1.3.1 ; python_version >= "3.12" and python_version < "4.0"
-starlette==0.41.3 ; python_version >= "3.12" and python_version < "4.0"
-typer==0.15.1 ; python_version >= "3.12" and python_version < "4.0"
-typing-extensions==4.12.2 ; python_version >= "3.12" and python_version < "4.0"
-urllib3==2.3.0 ; python_version >= "3.12" and python_version < "4.0"
+starlette==0.46.1 ; python_version >= "3.12" and python_version < "4.0"
+typer==0.15.2 ; python_version >= "3.12" and python_version < "4.0"
+typing-extensions==4.13.2 ; python_version >= "3.12" and python_version < "4.0"
+typing-inspection==0.4.0 ; python_version >= "3.12" and python_version < "4.0"
+urllib3==2.4.0 ; python_version >= "3.12" and python_version < "4.0"
 uvicorn[standard]==0.34.0 ; python_version >= "3.12" and python_version < "4.0"
 uvloop==0.21.0 ; (sys_platform != "win32" and sys_platform != "cygwin") and platform_python_implementation != "PyPy" and python_version >= "3.12" and python_version < "4.0"
-watchfiles==1.0.4 ; python_version >= "3.12" and python_version < "4.0"
-websockets==14.1 ; python_version >= "3.12" and python_version < "4.0"
-yarl==1.18.3 ; python_version >= "3.12" and python_version < "4.0"
+watchdog-gevent==0.2.1 ; python_version >= "3.12" and python_version < "4.0"
+watchdog==6.0.0 ; python_version >= "3.12" and python_version < "4.0"
+watchfiles==1.0.5 ; python_version >= "3.12" and python_version < "4.0"
+websockets==15.0.1 ; python_version >= "3.12" and python_version < "4.0"
+yarl==1.19.0 ; python_version >= "3.12" and python_version < "4.0"
+zope-event==5.0 ; python_version >= "3.12" and python_version < "4.0"
+zope-interface==7.2 ; python_version >= "3.12" and python_version < "4.0"
